--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VUE_APP_BACKEND_BASE_URL=https://webtech-anwendung.herokuapp.com/
+VUE_APP_BACKEND_BASE_URL= https://webtech-anwendung.herokuapp.com/
