--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@braid/vue-formulate": "^2.5.2",
+    "@popperjs/core": "^2.11.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
