--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@braid/vue-formulate": "^2.5.2",
+    "@okta/okta-auth-js": "^5.9.1",
+    "@okta/okta-signin-widget": "^5.15.0",
+    "@okta/okta-vue": "^5.0.2",
     "@popperjs/core": "^2.11.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
